# botg

./: .editorconfig  .env_example  .pre-commit-config.yaml  LOGGING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  fabfile.py  pyproject.toml
.linters/: docker-compose.yml  pyproject.toml
deploy/prod/systemd/: django_telegram_starter.service
docker/: Dockerfile  entrypoint-bot.sh  entrypoint-web.sh  nginx.conf
src/config/: __init__.py  env_settings.py  settings.py
src/django_telegram_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/libs/: __init__.py
src/libs/logging/: __init__.py  telegram_handler.py
src/telegram_bot/: __init__.py
src/telegram_bot/management/: __init__.py
src/telegram_bot/management/commands/: __init__.py  runbot.py
